--- a/index.html
+++ b/index.html
@@ -227,6 +227,34 @@
         //     break
         // }
 
+
+        // fonctions
+        // function canDrive(age, pays) {
+        //     if ((age >= 18 && pays === "FR") ||
+        //         (age >= 16 && pays === "US")) {
+        //             return true    
+        //     } else {
+        //             return false
+        //     }
+        // }
+        // console.log(canDrive(17, "US"))
+
+        // autre manière de déclarer une fonction > portée différente ! > fonction déclarée en dehors d'une variable = hoisting (utilisable dans l'ensemblre du code, même au dessus)
+        // const canDrive = function (age, pays) {...}
+
+        // fonction peut être déclaré sans retour
+        // function greeting(name) {
+        //     console.log("Bonjour", name)  
+        // }
+        // greeting("John")
+        // greeting("Jane")
+
+        // fonction a la capacité de modifier une variable CONST/LET définie à l'extérieur (y compris tableau/objet)
+
+        // function maFonction() {
+        //     console.log(this)
+        // }
+        // maFonction.call()
     </script>
 </head>
 <body>
