--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         // }
         // console.log(canDrive(17, "US"))
 
-        // autre manière de déclarer une fonction > portée différente ! > fonction déclarée en dehors d'une variable = hoisting (utilisable dans l'ensemblre du code, même au dessus)
+        // autre manière de déclarer une fonction > portée différente ! > fonction déclarée en dehors d'une variable = hoisting (utilisable dans l'ensemble du code, même au dessus)
         // const canDrive = function (age, pays) {...}
 
         // fonction peut être déclaré sans retour
@@ -249,12 +249,54 @@
         // greeting("John")
         // greeting("Jane")
 
-        // fonction a la capacité de modifier une variable CONST/LET définie à l'extérieur (y compris tableau/objet)
+        // fonction a la capacité de modifier une variable CONST/LET définie à l'extérieur si elle est appelée (y compris tableau/objet)
 
         // function maFonction() {
         //     console.log(this)
         // }
         // maFonction.call()
+
+        // methode
+        // const a = {
+        //     firstname: "John",
+        //     lastname: "Doe",
+        //     fullname : function () {
+        //         console.log(this.firstname, this.lastname)
+        //     }
+        // }
+        // a.fullname()
+
+        // greeting = ("Hello".toUpperCase())
+        // console.log(greeting)
+
+        // fonctions flêchées > This n'a pas le même comportement, FF n'alterent pas son contexte
+        // const maFonction = (param1, param2) => {
+        //     console.log(param1, param2)
+        // }
+        // maFonction(1, 2)
+
+        // const somme = (a, b) => {
+        //     return a + b
+        // }
+        // console.log(somme(1, 2))
+        
+        // autre syntaxe (simple retour)
+        // const somme = (a, b) => a + b
+        // console.log(somme(1, 2))
+
+        // fonction dans une fonction (callback)
+        // const isPair = function (a, cb) {
+        //     if (a % 2 === 0) {
+        //         cb()
+        //     } 
+        // }
+        // isPair(2, function () {
+        //     console.log("Mon nombre est impair")
+        // })
+
+
+        // EXOS FONCTIONS
+        
     </script>
 </head>
 <body>
