--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,7 @@
     <style>
         body {
             background: black;
+            color: white;
         }
     </style>
     <script src="app.js" type="module">
@@ -14,6 +15,13 @@
     </script>
 </head>
 <body>
-
+    <div id="hello">
+        Bonjour les gens
+    </div>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
+    </ul>
 </body>
 </html>
