--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        .red {
+            color: red;
+        }
         body {
             background: black;
             color: white;
@@ -19,7 +22,7 @@
         Bonjour les gens
     </div>
     <ul>
-        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
+        <li class="red" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
     </ul>
