--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,12 @@
     </script>
 </head>
 <body>
-    <div id="hello">
+    <button>Bonjour</button>
+    <button>Bonjour les gens</button>
+    <!-- <div id="lastPosts">
+        
+    </div> -->
+    <!-- <div id="hello">
         Bonjour les gens
     </div>
     <ul>
@@ -26,5 +31,10 @@
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati reiciendis aut nisi quae quasi aspernatur debitis error beatae sed cumque consequuntur tempora esse qui at, vitae exercitationem hic ducimus. Beatae.</li>
     </ul>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, iste impedit. Aliquid magni sequi quas, totam quisquam tenetur perspiciatis expedita nemo nam, quod voluptatem reprehenderit sint amet, accusantium dolor ipsa!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, iste impedit. Aliquid magni sequi quas, totam quisquam tenetur perspiciatis expedita nemo nam, quod voluptatem reprehenderit sint amet, accusantium dolor ipsa!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, iste impedit. Aliquid magni sequi quas, totam quisquam tenetur perspiciatis expedita nemo nam, quod voluptatem reprehenderit sint amet, accusantium dolor ipsa!</li>
+    </ul> -->
 </body>
 </html>
