--- a/index2.html
+++ b/index2.html
@@ -12,13 +12,20 @@
             background: black;
             color: white;
         }
+        div {
+            width: 100px;
+            height: 100px;
+            background: grey;
+        }
     </style>
     <script src="app.js" type="module">
         
     </script>
 </head>
 <body>
-    <button>Bonjour</button>
+    <div>
+        <button>Bonjour</button>
+    </div>
     <button>Bonjour les gens</button>
     <!-- <div id="lastPosts">
         
