--- a/Practice/index.html
+++ b/Practice/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,5 +11,10 @@
     <h2 id="count-el">0</h2>
     <button id="increment-btn">INCREMENT</button>
     <!-- <button id="increment-btn" onclick="increment()">INCREMENT</button> -->
+    <button id="save-btn">SAVE</button>
+    <!-- <p id="welcome-el">
+
+    </p> -->
+    <script src="app.js"></script>
 </body>
 </html>
