--- a/Squares/index.html
+++ b/Squares/index.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="square">White Pony</div>
+    <div class="wrapper">
+        <div class="squareWP">White Pony</div>
+        <div class="squareDE">Diamond Eyes</div>
+        <div class="squareSNW">Saturday Night Wrist</div>
+        <div class="squareKNY">Koï No Yokan</div>
+        <div class="squareO"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
