--- a/Squares/index.html
+++ b/Squares/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="squareWP">White Pony</div>
-        <div class="squareDE">Diamond Eyes</div>
-        <div class="squareSNW">Saturday Night Wrist</div>
-        <div class="squareKNY">Koï No Yokan</div>
-        <div class="squareO"></div>
+    <div id="wrapper">
+        <div class=square id="squareWP">White Pony</div>
+        <div class=square id="squareDE">Diamond Eyes</div>
+        <div class=square id="squareSNW">Saturday Night Wrist</div>
+        <div class=square id="squareKNY">Koï No Yokan</div>
+        <div class=square id="squareO"></div>
     </div>
     <script src="script.js"></script>
 </body>
