--- a/Squares/index.html
+++ b/Squares/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <div id="wrapper">
-        <div class=square id="squareWP">White Pony</div>
-        <div class=square id="squareDE">Diamond Eyes</div>
-        <div class=square id="squareSNW">Saturday Night Wrist</div>
-        <div class=square id="squareKNY">Koï No Yokan</div>
-        <div class=square id="squareO"></div>
+        <div class=square id="squareWP">1</div>
+        <div class=square id="squareDE">2</div>
+        <div class=square id="squareSNW">3</div>
+        <div class=square id="squareKNY">4</div>
     </div>
     <script src="script.js"></script>
 </body>
