--- a/Squares/index.html
+++ b/Squares/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div id="wrapper">
-        <div class=square id="squareWP">1</div>
-        <div class=square id="squareDE">2</div>
-        <div class=square id="squareSNW">3</div>
+        <div class=square>1</div>
     </div>
     <script src="script.js"></script>
 </body>
