--- a/Squares/index.html
+++ b/Squares/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <h1>Follow Us</h1>
     <div id="wrapper">
-        <div class=square id="squareWP">1</div>
-        <div class=square id="squareDE">2</div>
-        <div class=square id="squareSNW">3</div>
+        <div class=square id="FB"><i class="fa-brands fa-facebook"></i></div>
+        <div class=square id="TW"><i class="fa-brands fa-twitter"></i></div>
+        <div class=square id="IG"><i class="fa-brands fa-instagram"></i></div>
     </div>
     <script src="script.js"></script>
 </body>
