--- a/Squares/index.html
+++ b/Squares/index.html
@@ -10,9 +10,24 @@
 <body>
     <h1>Follow Us</h1>
     <div id="wrapper">
-        <div class=square id="FB"><i class="fa-brands fa-facebook"></i></div>
-        <div class=square id="TW"><i class="fa-brands fa-twitter"></i></div>
-        <div class=square id="IG"><i class="fa-brands fa-instagram"></i></div>
+        <div class="square" id="FB" data-color="#385999">
+            <i class="fa-brands fa-facebook"></i>
+            <p>
+                Facebook
+            </p>
+        </div>
+        <div class="square" id="TW" data-color="#1da1f2">
+            <i class="fa-brands fa-twitter"></i>
+            <p>
+                Twitter
+            </p>
+        </div>
+        <div class="square" id="IG" data-color="#c80087">
+            <i class="fa-brands fa-instagram"></i>
+            <p>
+                Instagram
+            </p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
