--- a/Citations/index.html
+++ b/Citations/index.html
@@ -7,173 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
-        <blockquote class="quote">
-            <h2>
-                
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-        <blockquote class="quote">
-            <h2>
-
-            </h2>
-            <p>
-
-            </p>
-            <cite>
-
-            </cite>
-        </blockquote>
-    </div>
-    <script src="quotes.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
