--- a/Practice/Subway Counter/index.html
+++ b/Practice/Subway Counter/index.html
@@ -12,6 +12,7 @@
     <button id="increment-btn">INCREMENT</button>
     <!-- <button id="increment-btn" onclick="increment()">INCREMENT</button> -->
     <button id="save-btn">SAVE</button>
+    <p id="save-el">Previous entries: </p>
     <!-- <p id="welcome-el">
 
     </p> -->
