--- a/Practice/Calculator/index2.html
+++ b/Practice/Calculator/index2.html
@@ -16,6 +16,7 @@
     <button>Purchase</button>
     <p id="error"></p> -->
         <span id="num1-el"></span>
+        <span>&</span>
         <span id="num2-el"></span>
         <br>
         <button id="add">Add</button>
