--- a/Practice/BlackJack/index3.html
+++ b/Practice/BlackJack/index3.html
@@ -8,7 +8,8 @@
             <p id="message-el">Want to play a round?</p>
             <p id="cards-el">Cards:</p>
             <p id="sum-el">Sum:</p>
-            <button id="start" >START GAME</button>
+            <button id="start" onclick="startGame()" >START GAME</button>
+            <button id="newCard" onclick="newCard()">NEW CARD</button>
             <script src="app3.js"></script>
         </div>    
     </body>
