--- a/Practice/BlackJack/index3.html
+++ b/Practice/BlackJack/index3.html
@@ -10,6 +10,7 @@
             <p id="sum-el">Sum:</p>
             <button id="start" onclick="startGame()" >START GAME</button>
             <button id="newCard" onclick="newCard()">NEW CARD</button>
+            <!-- <p id="greeting-el"></p> -->
             <script src="app3.js"></script>
         </div>    
     </body>
