update : suite d'exercices pratiques en JS (conditions, boucles, méthodes etc.)

--- a/Practice/BlackJack/index3.html
+++ b/Practice/BlackJack/index3.html
@@ -3,6 +3,8 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <!-- <div id="apple-shelf"></div>
+        <div id="orange-shelf"></div> -->
         <div id="wrapper">  
             <h1>Blackjack</h1>
             <p id="message-el">Want to play a round?</p>
