--- a/Lessons/index2.html
+++ b/Lessons/index2.html
@@ -12,21 +12,21 @@
             background: black;
             color: white;
         }
-        div {
+        /* div {
             width: 100px;
             height: 100px;
             background: grey;
-        }
+        } */
     </style>
-    <script src="app.js" type="module">
+    <script src="app.js">
         
     </script>
 </head>
 <body>
     <div>
-        <button>Bonjour</button>
+        <!-- <button>Bonjour</button> -->
     </div>
-    <button>Bonjour les gens</button>
+    <!-- <button>Bonjour les gens</button> -->
     <!-- <div id="lastPosts">
         
     </div> -->
