--- a/Practice/Extension/index.html
+++ b/Practice/Extension/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <div id="container">
-        <input type="text" id="input-el">
+        <!-- <input type="text" id="input-el">
         <button id="input-btn">SAVE INPUT</button>
-
+            <ul id="ul-el">
+                
+            </ul> -->
+            
         <script src="script.js"></script>
     </div>
 </body>
