--- a/Practice/Extension/index.html
+++ b/Practice/Extension/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <div id="container">
-        <!-- <input type="text" id="input-el">
-        <button id="input-btn">SAVE INPUT</button>
+        <input type="text" id="input-el">
+        <button id="input-btn">SAVE INPUT</button><br><br>
             <ul id="ul-el">
-                
-            </ul> -->
-            
+
+            </ul><br>
         <script src="script.js"></script>
     </div>
 </body>
