--- a/Practice/Extension/index.html
+++ b/Practice/Extension/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <input type="text" id="input-el">
-        <button id="input-btn">SAVE INPUT</button><br><br>
+        <button id="input-btn">SAVE INPUT</button>
+        <button id="delete-btn">DELETE ALL</button><br><br>
             <ul id="ul-el">
 
             </ul><br>
