--- a/Practice/Extension/index.html
+++ b/Practice/Extension/index.html
@@ -10,6 +10,7 @@
     <div id="container">
         <input type="text" id="input-el">
         <button id="input-btn">SAVE INPUT</button>
+        <button id="tab-btn">SAVE TAB</button>
         <button id="delete-btn">DELETE ALL</button><br><br>
             <ul id="ul-el">
 
